test/errors/template.006.tmpl
<TMPL_VAR [%
    $a &&
    $b ||
    $c
%]>
<TMPL_VAR [%
    $a &&
%]>
